--- a/welcome-page/src/index.css
+++ b/welcome-page/src/index.css
@@ -14,13 +14,13 @@ body {
   background-color: #343a40 !important;
 }
 
-.navbar-nav .nav-link {
+/* .navbar-nav .nav-link {
   color: #fff !important;
   font-weight: 500;
-}
+} */
 
 .navbar-nav .nav-link:hover {
-  color: #8dced3 !important;
+  color: #ccdada !important;
 }
 
 
